<resources>
    <string name="app_name">HW_2</string>
    <string name="notification">Notification</string>
    <string name="back">back</string>
    <string name="search">search</string>
    <string name="avatar">avatar</string>
    <string name="replays">117 replays</string>
    <string name="like">like</string>
    <string name="name_1">Roman Kamushken</string>
    <string name="name_2">Tina Turbina</string>
    <string name="name_3">Tomek Kuwalskij</string>
    <string name="date_1">2 days ago</string>
    <string name="date_2">18 minutes ago</string>
    <string name="description_1">Check out awesome updates for Android design kit for Figma. Now more screens and more categories.</string>
    <string name="description_2">“into component container and with resizing constraints set????”</string>
    <string name="description_3">“into component container and with resizing constraints set????”</string>
    <string name="shopping">shopping</string>
    <string name="book">book</string>
    <string name="cart">cart</string>
    <string name="tag_heart">tag_heart</string>
    <string name="heart_filled">heart_filled</string>
    <string name="account">Account</string>
</resources>