<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_24"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:fontFamily="@font/roboto"
        android:text="@string/notification"
        android:textStyle="bold"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_8"
        android:contentDescription="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:paddingHorizontal="@dimen/dp_8"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_16"
            android:paddingHorizontal="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_12">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_12"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:contentDescription="@string/avatar"
                    app:srcCompat="@drawable/ic_man_1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/name_1" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/date_1" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:fontFamily="@font/roboto"
                android:text="@string/description_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/replays"
                    android:textColor="@color/blue" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginTop="@dimen/dp_4"
                    android:background="none"
                    android:contentDescription="@string/like"
                    app:srcCompat="@drawable/ic_like" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_16"
            android:paddingHorizontal="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_12">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_12"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:contentDescription="@string/avatar"
                    app:srcCompat="@drawable/ic_woman_1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/name_2" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/date_2" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:fontFamily="@font/roboto"
                android:text="@string/description_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/replays"
                    android:textColor="@color/blue" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginTop="@dimen/dp_4"
                    android:background="none"
                    android:contentDescription="@string/like"
                    app:srcCompat="@drawable/ic_like" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_16"
            android:paddingHorizontal="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_12">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dp_12"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:contentDescription="@string/avatar"
                    app:srcCompat="@drawable/ic_man_2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/name_3" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/date_1" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:fontFamily="@font/roboto"
                android:text="@string/description_3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/replays"
                    android:textColor="@color/blue" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginTop="@dimen/dp_4"
                    android:background="none"
                    android:contentDescription="@string/like"
                    app:srcCompat="@drawable/ic_like" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/dp_56"
      android:orientation="horizontal"
      android:layout_marginTop="@dimen/dp_64"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
      tools:layout_editor_absoluteX="0dp"
      android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_43"
        android:layout_marginTop="@dimen/dp_13"
        android:layout_weight="1"
        android:orientation="vertical">

      <ImageButton
          android:id="@+id/imageButton9"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_2"
          app:srcCompat="@drawable/ic_shopping"
          android:background="none"
          android:contentDescription="@string/shopping" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_43"
        android:layout_marginTop="@dimen/dp_13"
        android:layout_weight="1"
        android:orientation="vertical">

      <ImageButton
          android:id="@+id/imageButton10"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_2"
          app:srcCompat="@drawable/ic_book_open_variant"
          android:background="none"
          android:contentDescription="@string/book" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_43"
        android:layout_marginTop="@dimen/dp_13"
        android:layout_weight="1"
        android:orientation="vertical">

      <ImageButton
          android:id="@+id/imageButton11"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_2"
          app:srcCompat="@drawable/ic_cart"
          android:background="none"
          android:contentDescription="@string/cart" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_43"
        android:layout_marginTop="@dimen/dp_13"
        android:layout_weight="1"
        android:orientation="vertical">

      <ImageButton
          android:id="@+id/imageButton12"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_2"
          app:srcCompat="@drawable/ic_tag_heart"
          android:background="none"
          android:contentDescription="@string/tag_heart" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

      <ImageButton
          android:id="@+id/imageButton13"
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp_24"
          android:layout_marginTop="@dimen/dp_6"
          app:srcCompat="@drawable/ic_heart_filled"
          android:background="none"
          android:contentDescription="@string/heart_filled" />

      <TextView
          android:id="@+id/textView19"
          android:layout_width="match_parent"
          android:layout_height="@dimen/dp_16"
          android:gravity="center"
          android:textColor="@color/blue"
          android:fontFamily="@font/roboto"
          android:text="@string/account" />
    </LinearLayout>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>